1. 설정 - 환경 설정: 목록 및 팝업 작업 2. 설정 - 배치 작업: 목록 및 팝업 작업

--- a/base/html/index.html
+++ b/base/html/index.html
@@ -490,7 +490,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/set_config_list.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -504,7 +504,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_config_view.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -518,7 +518,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_config_add.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -532,7 +532,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_config_edit.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -546,7 +546,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/bj_list.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -560,7 +560,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/bj_view.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -574,7 +574,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/bj_add.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -588,7 +588,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/bj_edit.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
