1. gnb 좌측메뉴 하단 메뉴 추가 2. 교차로 > 시스템 관리 > 카메라 관리 목록/상세/추가/수정 화면 작업

--- a/base/html/common/gnb.html
+++ b/base/html/common/gnb.html
@@ -148,7 +148,10 @@
 </div>
 <!-- //menu -->
 <aside class="aside">
-  <button type="button" data-target="">알림</button>
-  <a href="#">계정설정</a>
-  <span class="current-time">2023. 05. 01 11:09:22</span>
+  <button type="button" class="btn-bell" data-target="">알림</button>
+  <button type="button" class="btn-m" data-target="">계정설정</button>
+  <div class="current-time">
+    <span>23. 05. 01</span>
+    <span>11:09:22</span>
+  </div>
 </aside>
