--- a/base/html/map_crossroad_view.html
+++ b/base/html/map_crossroad_view.html
@@ -17,6 +17,7 @@
     <script src="/base/js/common/ui.js"></script>
     <link rel="stylesheet" href="http://map.ngii.go.kr/emap/css/map/OpenLayers-6.4.3.css" />
     <link rel="stylesheet" href="/base/css/common.css" />
+    <link rel="stylesheet" href="/base/css/is.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -197,6 +198,9 @@
       window.onload = function () {
         var map1 = new ngii_wmts.map('map1', { zoom: 6 });
       };
+
+      // 탭 퍼블리싱 확인용
+      $('.crossroad-view-container .menu .item').tab();
     </script>
   </body>
 </html>
