1. ROI 목록 화면: 속도ROI 항목 추가 2. 속도ROI 탭 추가 및 인식설정 부분 수정 3. 교차로 상세 통계 화면 작업 4. [공통] 목록 화면의 데이터 셀 클릭시 활성화 표시 추가(set_area.html    참고)

--- a/base/html/crossroads_roi_set_list.html
+++ b/base/html/crossroads_roi_set_list.html
@@ -82,6 +82,7 @@
                   <col />
                   <col />
                   <col />
+                  <col />
                 </colgroup>
                 <thead>
                   <tr>
@@ -95,6 +96,7 @@
                     <th>객체 ROI</th>
                     <th>돌발 ROI</th>
                     <th>교차로 ROI</th>
+                    <th>속도 ROI</th>
                     <th>수집 일시</th>
                     <th>ROI 설정</th>
                   </tr>
@@ -111,6 +113,7 @@
                     <td>설정</td>
                     <td>설정</td>
                     <td>미설정</td>
+                    <td>미설정</td>
                     <td>2021-06-07 12:31:33</td>
                     <td>
                       <a href="#" class="ui secondary basic button c-gray-type2 rounded">이동</a>
@@ -126,6 +129,7 @@
                     <td>북</td>
                     <td>설정</td>
                     <td>설정</td>
+                    <td>미설정</td>
                     <td>미설정</td>
                     <td>2021-06-07 12:31:33</td>
                     <td>
