--- a/base/html/crossroads_roi_set_tab.html
+++ b/base/html/crossroads_roi_set_tab.html
@@ -32,6 +32,7 @@
           <a href="#none;" class="item active" data-tab="first">객체 ROI</a>
           <a href="#none;" class="item" data-tab="second">돌발 ROI</a>
           <a href="#none;" class="item" data-tab="third">교차로 ROI</a>
+          <a href="#none;" class="item" data-tab="four">속도 ROI</a>
         </div>
         <!-- //menu -->
         <div class="ui bottom attached tab segment tab-obj-roi active" data-tab="first">
@@ -39,6 +40,7 @@
             <div class="perceive-header">
               <h3>인식설정</h3>
               <div class="right">
+                <span class="txt">세종과학예술영재학교방면</span>
                 <div class="selectbox-wrap xs">
                   <select>
                     <option value="">채널1</option>
@@ -46,7 +48,6 @@
                     <option value="">채널3</option>
                   </select>
                 </div>
-                <span class="txt">카메라명</span>
               </div>
               <!-- //right -->
             </div>
@@ -149,6 +150,7 @@
         <!-- //객체 ROI 컨텐츠 -->
         <div class="ui bottom attached tab segment tab-accidental-roi" data-tab="second">돌발 ROI 내용..</div>
         <div class="ui bottom attached tab segment tab-crossroad-roi" data-tab="third">교차로 ROI 내용..</div>
+        <div class="ui bottom attached tab segment tab-speed-roi" data-tab="four">속도 ROI 내용..</div>
 
         <button type="button" class="btn-roi-view">
           <span class="screen-out">ROI설정 상세 열기/닫기 버튼</span>
