--- a/base/html/index.html
+++ b/base/html/index.html
@@ -894,7 +894,77 @@
                           <td class="col-4depth"></td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type=""></td>
-                          <td class="col-url">html/crossroads_stats.html</td>
+                          <td class="col-url">html/crossroads_stats_main.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth">교차로 상세 통계</td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/crossroads_stats_view.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth">교차로 비교 통계</td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/crossroads_stats_comparison.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">비교 지점 선택</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/comparison_popup.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth">교차로 원시 이력</td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/crossroads_stats_primitive.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">Excel Down 검색 조건</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/primitive_popup.html</td>
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete=""></td>
                           <!-- <td class="col-worker"></td> -->
