--- a/base/html/set_area.html
+++ b/base/html/set_area.html
@@ -100,7 +100,8 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
+                  <!-- 목록 화면 데이터 클릭시 active 클래스 추가 -->
+                  <tr class="active">
                     <td>
                       <div class="ui checkbox primary-chkbox txt-none c-bluesky">
                         <input type="checkbox" />
