--- a/base/html/index.html
+++ b/base/html/index.html
@@ -134,14 +134,14 @@
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
                           <td class="col-1depth">팝업</td>
-                          <td class="col-2depth">시스템 모달팝업</td>
+                          <td class="col-2depth">alert, confirm 팝업</td>
                           <td class="col-3depth"></td>
                           <td class="col-4depth"></td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달팝업"></td>
-                          <td class="col-url">html/common/popup.html</td>
+                          <td class="col-url">html/common/default_popup.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
