--- a/base/html/index.html
+++ b/base/html/index.html
@@ -924,7 +924,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/crossroads_stats_comparison.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -938,7 +938,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/comparison_popup.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -952,7 +952,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/crossroads_stats_primitive.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -966,7 +966,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/primitive_popup.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
