1. 지도 화면: 교차로 돌발/장애 아이콘 추가 2. 지도 화면: 우측 상단 구역명 수정 3. 지도 화면: 교차로 클릭시 돌발/장애 딤드 팝업 호출

--- a/base/html/index.html
+++ b/base/html/index.html
@@ -234,8 +234,33 @@
                           <td class="col-complete" data-complete=""></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo">
+                            <ul style="font-weight: bold">
+                              <li>- 우측 상단 구역명 표시</li>
+                              <li>- 우측 하단 LOS 범례 표시</li>
+                              <li>- 횡단 보도 아이콘</li>
+                              <li>- 교차로 도로 표시 및 교차로 클릭시 노출되는 팝업</li>
+                              <li>- 교차로 클릭시 노출되는 팝업(장애 발생 case)</li>
+                            </ul>
                             <p>- TODO: GNB 2뎁스 메뉴 style 작업 예정</p>
                             <p>- TODO: GNB 하단 알림 영역 작업 예정</p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/map_main2.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo">
+                            <ul style="font-weight: bold">
+                              <li>- 교차로 클릭시 노출되는 팝업(돌발 발생 case)</li>
+                            </ul>
                           </td>
                         </tr>
                         <tr>
